# illumio-mcp-server

./: .gitignore  CLAUDE.md  Dockerfile  FASTMCP_MIGRATION.md  README.md  pyproject.toml  requirements.txt  test_fastmcp.py
.github/workflows/: docker-release.yml
src/illumio_mcp/: Dockerfile  __init__.py  server.py
src/illumio_mcp/core/: __init__.py  config.py  connection.py  encoders.py  logging.py
src/illumio_mcp/prompts/: __init__.py  prompts.py
src/illumio_mcp/tools/: __init__.py  labels.py  misc.py  policies.py  traffic.py  workloads.py
src/illumio_mcp/utils/: __init__.py  filters.py
